--- a/exercicios-lp-fatec/index.html
+++ b/exercicios-lp-fatec/index.html
@@ -25,6 +25,11 @@
         <a href="ex2/index.php" class="list-group-item list-group-item-action">Exercício 2</a>
         <a href="ex3/index.php" class="list-group-item list-group-item-action">Exercício 3</a>
         <a href="ex4/index.php" class="list-group-item list-group-item-action">Exercício 4</a>
+        <a href="ex5/index.php" class="list-group-item list-group-item-action">Exercício 5</a>
+        <a href="ex6/index.php" class="list-group-item list-group-item-action">Exercício 6</a>
+        <a href="ex7/index.php" class="list-group-item list-group-item-action">Exercício 7</a>
+        <a href="ex8/index.php" class="list-group-item list-group-item-action">Exercício 8</a>
+        <a href="ex9/index.php" class="list-group-item list-group-item-action">Exercício 9</a>
     </ul>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
